# url-shortener-v2

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
entities/: Cargo.toml
entities/src/: mod.rs  url.rs
migration/src/: lib.rs  m20230816_030414_create_url_table.rs
service/: Cargo.toml
service/src/: lib.rs
service/tests/: prepare.rs  test.rs
src/: main.rs  utils.rs
src/api_v1/: mod.rs
src/entities/: mod.rs  prelude.rs  url.rs
src/urls/: mod.rs  test.rs
