[package]
name = "url-shortener-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
rand = "^0.8"
reqwest = "0.11"
scraper = "0.12"
migration = {path= "./migration"}


[workspace]
members = ["migration"]
